# kafi

./: .gitignore  2025-11-27-Meetup.ipynb  AI-ADDENDUM  CONTRIBUTING  Dockerfile  HUMAN-SOURCE-ADDENDUM  LICENSE  LICENSE-AI-ADDENDUM  README.md  TODO.md  bla.py  classify.py  demo.ipynb  ksqlDB_json_to_avro.py  multiple_sinks.ipynb  pyproject.toml  requirements.txt  requirements_build.txt  robots.txt  setup.py  sql.ipynb  test.py  test_streams.py  test_topologynode.py  trivy.sh  win_tests.py  windows.ipynb  wordcount.ipynb
cur23/: scored.proto.txt  scraped.json
docs/: conf.py  index.rst  kafi.ipynb  kafi.md  quickstart.ipynb  streams.ipynb  streams.md  windows.ipynb
kafi/: addons.py  chunker.py  dechunker.py  deserializer.py  files.py  functional.py  helpers.py  kafi.py  pandas.py  partitioner.py  partitioners.py  schemaregistry.py  serializer.py  shell.py  storage.py  storage_admin.py  storage_consumer.py  storage_producer.py  storage_reader.py  storage_writer.py
kafi/fs/: fs.py  (+5 more)
old_test_streams/: test_datagen_base.py  test_jamie_base.py  test_streams_base.py  test_streams_datagen.py  test_streams_jamie.py  test_topologynode_base.py  test_topologynode_datagen.py  test_topologynode_jamie.py  test_topologynode_sqlzoo.py
pydbsp/: datalog_stratified.py  indexed_relational_operators.py  rdfs.py  relational_operators_orig.py
test/: README.md  single_storage_base.py  test_all.sh  test_cross_storage.py  test_cross_storage.sh  test_datagen_base.py  test_fs_azureblob.py  test_fs_local.py  test_fs_local.sh  test_fs_s3.py  test_jamie_base.py  test_kafi.py  test_kafi.sh  (+15 more)
(+286 files in other folders)
