[project]
name = "kafi"
version = "0.1.0"
description = "Kafka and Files"
readme = "README.md"
authors = [
    { name = "Ralph M. Debusmann", email = "matthias.debusmann@gmail.com" }
]
license = "Apache License 2.0 AND LicenseRef-Proprietary"
license-files = [
    "LICENSE",
    "AI-ADDENDUM"
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "piny==1.1.0",
    "confluent-kafka[avro,json,protobuf,schemaregistry]==2.14.2",
    "grpcio-tools==1.81.1",
    "requests==2.34.2",

    "azure-storage-blob==12.30.0",
    "minio==7.2.20",

    "fastparquet==2026.5.0",
    "lxml==6.1.1",
    "openpyxl==3.1.5",
    "pandas==3.0.3",

    "cloudpickle==3.1.2",
    "msgpack==1.2.0",
    "pydbsp==2.1.0",
    'zstandard==0.25.0'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["kafi", "README.md"]
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
  "**/.pytest_cache",
  "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["kafi"]
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
  "**/.pytest_cache",
  "**/.DS_Store",
]
